# anagrimes3

./: README.md  pyproject.toml
data/: coin.txt
lib/wikt/: __init__.py  article.py  data.py  parse_json.py  parser.py
scripts/: parse_json.py  parse_page.py  test.py  test_from_xml.py  test_jsonl.py
